--- a/weatherapp/src/main/AndroidManifest.xml
+++ b/weatherapp/src/main/AndroidManifest.xml
@@ -1,4 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?><!--
+<?xml version="1.0" encoding="utf-8"?>
+<!--
   ~ Copyright 2017 (C) CodePlay Studio. All rights reserved.
   ~
   ~ All source code within this app is licensed under the Apache License, Version 2.0 (the "License");
@@ -11,25 +12,29 @@
   ~ License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND,
   ~ either express or implied. See the License for the specific language governing permissions
   ~ and limitations under the License.
--->
+  -->
+
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.mike.loancalculator">
+    package="com.mike.weatherapp">
+
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
+        android:usesCleartextTraffic="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat">
-        <activity android:name=".LoanActivity"
-            android:theme="@style/AppFullScreenTheme">
-           <intent-filter>
+        android:theme="@style/AppTheme">
+        <activity android:name=".MainActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar">
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity android:name=".activity_calculator"
-            android:theme="@style/Theme.AppCompat">
         </activity>
     </application>
 
