--- a/loancalculator/src/main/AndroidManifest.xml
+++ b/loancalculator/src/main/AndroidManifest.xml
@@ -21,16 +21,20 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat">
-        <activity android:name=".LoanActivity"
+        <activity
+            android:name=".LoanActivity"
             android:theme="@style/AppFullScreenTheme">
-           <intent-filter>
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity_calculator"
-            android:theme="@style/Theme.AppCompat">
-        </activity>
+        <activity
+            android:name=".activity_calculator"
+            android:theme="@style/Theme.AppCompat" />
+        <activity android:name=".item_history_card" />
+        <activity android:name=".activity_history"></activity>
     </application>
 
 </manifest>
